// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeopleScreen mapStateToProps should provide the necessary props 1`] = `
Object {
  "isJean": true,
  "orgs": Array [
    Object {
      "id": "personal",
      "people": Array [
        Object {
          "id": 1,
          "type": "person",
        },
        Object {
          "id": 2,
          "type": "person",
        },
        Object {
          "id": 3,
          "type": "person",
        },
      ],
      "type": "organization",
    },
    Object {
      "id": 10,
      "name": "org 1",
      "people": Array [
        Object {
          "id": 11,
          "type": "person",
        },
      ],
      "type": "organization",
    },
    Object {
      "id": 20,
      "name": "org 2",
      "people": Array [
        Object {
          "id": 21,
          "type": "person",
        },
      ],
      "type": "organization",
    },
  ],
}
`;

exports[`PeopleScreen renders correctly as Casey 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(Header)
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="addContactIcon"
        onPress={[Function]}
        size={24}
        type="MissionHub"
      />
    }
    shadow={true}
    title="PEOPLE"
  />
  <Translate(PeopleList)
    items={
      Array [
        Object {
          "id": "personal",
          "people": Array [
            Object {
              "id": 1,
              "type": "person",
            },
            Object {
              "id": 2,
              "type": "person",
            },
            Object {
              "id": 3,
              "type": "person",
            },
          ],
          "type": "organization",
        },
        Object {
          "id": 10,
          "name": "org 1",
          "people": Array [
            Object {
              "id": 11,
              "type": "person",
            },
          ],
          "type": "organization",
        },
        Object {
          "id": 20,
          "name": "org 2",
          "people": Array [
            Object {
              "id": 21,
              "type": "person",
            },
          ],
          "type": "organization",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    onSelect={[Function]}
    refreshing={false}
    sections={false}
  />
</Component>
`;

exports[`PeopleScreen renders correctly as Jean 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(Header)
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    right={
      <IconButton
        name="searchIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    shadow={false}
    title="PEOPLE"
  />
  <Translate(PeopleList)
    items={
      Array [
        Object {
          "id": "personal",
          "people": Array [
            Object {
              "id": 1,
              "type": "person",
            },
            Object {
              "id": 2,
              "type": "person",
            },
            Object {
              "id": 3,
              "type": "person",
            },
          ],
          "type": "organization",
        },
        Object {
          "id": 10,
          "name": "org 1",
          "people": Array [
            Object {
              "id": 11,
              "type": "person",
            },
          ],
          "type": "organization",
        },
        Object {
          "id": 20,
          "name": "org 2",
          "people": Array [
            Object {
              "id": 21,
              "type": "person",
            },
          ],
          "type": "organization",
        },
      ]
    }
    onAddContact={[Function]}
    onRefresh={[Function]}
    onSelect={[Function]}
    refreshing={false}
    sections={true}
  />
</Component>
`;
